# LazyBridge

./: .gitignore  .pre-commit-config.yaml  ASSESSMENT_2026-07.md  AUDIT_DEEP_FRAMEWORK.md  CHANGELOG.md  CONTRIBUTING.md  ECOSYSTEM_MASTER_PLAN_2026-07.md  HANDOFF.md  IMPLEMENTATION.md  LAZYTOOLS_EXTRACTION.md  LICENSE  MEDIA_OUTPUT.md  MESSAGES.md  PROJECT_LAYOUT.md  README.md  SECURITY.md  SUPERTOOL_PLAN.md  framework_monitor.py  llms.txt  mkdocs.yml  pyproject.toml  setup_spyder_paths.py  validate_docs.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  docs.yml  integration.yml  release.yml  test.yml
Old doc/: AUDIT.md  README.md  llms.txt
Old doc/docs/: index.md
artifacts/: docs_example_report.json  docs_example_summary.txt
docs/: CNAME  agents.md  best-python-ai-agent-frameworks.md  changelog.md  comparison.md  context.md  ecosystem.md  errors.md  index.md  investor-overview.md  pipelines.md  quickstart.md  reference.md  routing.md  sessions.md  tools.md  troubleshooting.md  why.md
docs/beginners/: 01-what-is-an-llm.md  02-raw-sdks.md  03-first-agent.md  04-tools.md  05-multi-agent.md  06-chain.md  06-verify.md  07-chain.md  08-parallel.md  09-plan.md  10-human-engine.md  10-routing.md  11-human-engine.md  12-next-steps.md  12-vs-frameworks.md  13-next-steps.md  index.md
docs/concepts/: canonical-vs-sugar.md  everything-is-a-tool.md  grammar.md  layered-composition.md  mental-model.md  progressive-complexity.md
docs/course/: 01-first-agent.md  02-tools.md  03-structured-output.md  04-memory.md  05-context.md  06-pipelines.md  07-streaming.md  08-guardrails.md  09-observability.md  10-evals.md  11-advanced.md  12-composition.md  13-human-in-the-loop.md  index.md
docs/data_downloader/: README.md
docs/decisions/: checkpoint.md  composition.md  human-engine-vs-supervisor.md  index.md  need-advanced.md  parallelism.md  pick-tier.md  report-shape.md  return-type.md  state-layer.md  tool-wrapping.md  verify-placement.md
docs/for-llms/: claude-skill.md  codegen-contract.md  error-recovery.md  index.md  llms-txt.md
docs/guides/: agent-parallel.md  agent.md  as-tool.md  base-provider.md  chain.md  checkpoint.md  core-types.md  core-vs-ext.md  engine-protocol.md  envelope.md  evals.md  exporters.md  fragment-bus.md  graph-schema.md  guards.md  human-engine.md  mcp.md  memory.md  native-tools.md  operations.md  parallel-steps.md  plan-serialize.md  plan.md  providers.md  register-provider.md  report-assemblers.md  report-builder.md  report-charts.md  report-citations.md  report-exporters.md  report-fragments.md  report-generate.md  sentinels.md  session.md  store.md  supervisor.md  testing.md  tool-schema.md  tool.md  verify.md
docs/migrations/: 0.7-to-0.79.md  0.7-to-0.8.md  1.0-to-0.7.md
docs/pulse/: index.md
docs/recipes/: agent-builds-plan.md  blackboard-planner.md  daily-news.md  dynamic-replanning.md  hil-chat-loop.md  hil-clarify.md  hil-custom-ui.md  hil-entrypoint.md  human-in-the-loop.md  index.md  live-visualization.md  mcp.md  orchestration-tools.md  parallel-report.md  plan-tool.md  plan-with-resume.md  react-agent.md  researcher-reporter.md  researcher-single.md  structured-output.md  supervisor-pattern.md  tool-calling.md  visualization-mock.md
docs/reference/: agent.md  configs.md  engines.md  extensions.md  guards.md  index.md  multi-agent.md  providers.md  sentinels.md  session.md  state.md  tools.md
docs/skill/: 00_overview.md  01_basic.md  02_mid.md  03_full.md  04_advanced.md  05_decision_trees.md  06_reference.md  SKILL.md
docs/stylesheets/: extra.css
docs/tiers/: advanced.md  basic.md  full.md  mid.md
docs/tools/: index.md
examples/: README.md  daily_news_report.py  guardrails_demo.py  gui_demo.py  human_gui_demo.py  investment_research_platform.py  parallel_report_pipeline.py  research_pipeline_langgraph.py  research_pipeline_lazybridge.py  research_pipeline_lazybridgeframework.py  research_pipeline_raw_sdk.py  stat_runtime_manual_test.py  stock_analysis_pipeline.py  supervised_pipeline.py  verify_judge_loop.py  viz_demo.py  viz_mock_demo.py  write_paper.py
examples/cli_agents/: phase1_claude_code.py  phase2_codex.py  phase3_collaboration.py
examples/crewai/: 01_research_crew_single_agent.py  02_research_and_report.py
examples/hil_app/: 01_clarify.py  02_entrypoint.py  03_chat_loop.py  04_custom_ui.py  __init__.py
examples/langgraph/: 01_react_agent_weather.py  02_supervisor_research_math.py
examples/llm_assistant/: 01_single_agent.py  02_agent_with_named_tool.py  03_structured_output.py  04_plan_with_checkpoint.py  05_mcp_allowlisted.py  06_testing_with_mock_agent.py  __init__.py
examples/patterns/: agent_builds_plan.py  blackboard_planner.py  dynamic_planner.py  plan_tool.py
lazy_wiki/bot/: 00_quickref.md  01_lazyagent.md  02_lazysession.md  03_lazytool.md  04_lazycontext.md  05_lazystore.md  06_lazyrouter.md  07_graphschema.md  08_patterns.md  09_advanced.md  10_tool_schema.md  12_tools.md  (+6 more)
lazybridge/: __init__.py  _asyncbridge.py  _verify.py  agent.py  dedup_guard.py  envelope.py  evals.py  exporters.py  guardrails.py  human.py  lazy_agent.py  lazy_context.py  lazy_router.py  lazy_run.py  lazy_session.py  lazy_store.py  lazy_tool.py  llms.json  matrix.py  memory.py  pipeline_builders.py  planners.py  pool.py  predicates.py  quant_agent.py  sentinels.py  session.py  signals.py  store.py  supervisor.py  testing.py  tools.py
lazybridgeframework/: __init__.py  lazy_agent.py  lazy_context.py  lazy_router.py  lazy_run.py  lazy_session.py  lazy_store.py  lazy_tool.py  memory.py
mocks/: blue-comparison.html  lazybridge-restyle-anthropic-blue.html  lazybridge-restyle-material-blue.html  lazybridge-restyle-stripe.html  logo-recolor-prompt.md
overrides/: main.html
tests/: conftest.py
tools/: check_ext_imports.py  doc_skills_tool.py  fragment_quality_pass.py  generate_tier_matrix.py  mkdocs_provider_table.py  read_docs_tool.py
website/: docs.html  examples.html  index.html  llms.txt  preview.html
(+789 files in other folders)
