[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lazybridge"
version = "0.7.0"
description = "Zero-boilerplate multi-provider LLM agent framework"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Marco Selvatici" }]
keywords = ["llm", "agents", "multi-agent", "anthropic", "openai", "google", "pipeline", "tool-use"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["pydantic>=2.0.0,<3.0.0"]

# Provider SDKs are capped at the next major to prevent silent breakage
# from `pip install -U` when upstream ships an incompatible release.
# Bump the upper bound intentionally after re-running the provider
# integration tests against the new major.
[project.optional-dependencies]
anthropic = ["anthropic>=0.49.0,<1.0.0"]
openai    = ["openai>=1.70.0,<3.0.0"]
google    = ["google-genai>=1.10.0,<2.0.0"]
deepseek  = ["openai>=1.70.0,<3.0.0"]
# LiteLLM bridge — unlocks 100+ extra providers (Mistral, Cohere, Groq,
# Bedrock, Vertex, Ollama, etc.) behind the ``litellm/`` model-string
# prefix. Native providers still handle their own models directly.
litellm   = ["litellm>=1.40.0,<2.0.0"]
yaml      = ["pyyaml>=6.0,<7.0"]
tools     = ["pypdf>=3.0,<7.0", "python-docx>=1.0,<2.0", "trafilatura>=1.6,<3.0"]
report    = ["markdown>=3.5,<4.0", "bleach>=6.0,<7.0", "jinja2>=3.0,<4.0"]
pdf       = ["weasyprint>=62.0,<69.0"]
# Fragment-based reporting subsystem (additive over [report]).
# report-charts: vl-convert-python — pure-Rust Vega-Lite renderer (no Node, no
# Chrome, no display server) + Plotly for opt-in interactive charts.  kaleido
# is intentionally omitted — it pulls a system Chrome and is the sharp edge
# of the Plotly raster path; users opt in explicitly when they need it.
report-charts    = ["vl-convert-python>=1.0,<2.0", "plotly>=5.20,<7.0"]
# report-citations: Crossref enrichment via habanero, pure-Python CSL renderer
# fallback when Pandoc citeproc isn't reachable, httpx for OpenAlex.
report-citations = ["habanero>=1.2,<3.0", "citeproc-py>=0.7,<1.0", "httpx>=0.25,<1.0"]
# report-fallback: pure-Python rendering when the Quarto CLI isn't installed.
# pypandoc shells out to `pandoc`; python-docx handles surgical post-process.
report-fallback  = ["weasyprint>=62.0,<69.0", "pypandoc>=1.13,<2.0", "python-docx>=1.0,<2.0"]
otel      = ["opentelemetry-api>=1.20,<2.0", "opentelemetry-sdk>=1.20,<2.0"]
mcp       = ["mcp>=1.0,<2.0"]
# ``pydantic`` is a runtime dependency but tests import it directly
# (fixtures, dataclass coercion, schema validation).  Including it in
# the [test] extra makes ``pip install -e '.[test]'`` a one-step
# bootstrap for newcomers.
test      = ["pytest>=7.0", "pytest-asyncio>=0.23", "pytest-cov>=4.0", "pydantic>=2.0.0,<3.0.0"]
docs      = ["mkdocs-material>=9.0", "mkdocstrings[python]>=0.24"]
all       = ["anthropic>=0.49.0,<1.0.0", "openai>=1.70.0,<3.0.0", "google-genai>=1.10.0,<2.0.0", "litellm>=1.40.0,<2.0.0", "pyyaml>=6.0,<7.0", "pypdf>=3.0,<7.0", "python-docx>=1.0,<2.0", "trafilatura>=1.6,<3.0", "markdown>=3.5,<4.0", "bleach>=6.0,<7.0", "jinja2>=3.0,<4.0", "weasyprint>=62.0,<69.0", "vl-convert-python>=1.0,<2.0", "plotly>=5.20,<7.0", "habanero>=1.2,<3.0", "citeproc-py>=0.7,<1.0", "httpx>=0.25,<1.0", "pypandoc>=1.13,<2.0", "opentelemetry-api>=1.20,<2.0", "opentelemetry-sdk>=1.20,<2.0", "mcp>=1.0,<2.0"]

[project.urls]
Homepage      = "https://github.com/selvaz/LazyBridge"
Repository    = "https://github.com/selvaz/LazyBridge"
Documentation = "https://github.com/selvaz/LazyBridge/tree/main/docs"
Changelog     = "https://github.com/selvaz/LazyBridge/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/selvaz/LazyBridge/issues"

[tool.hatch.build.targets.wheel]
packages = ["lazybridge"]

[tool.hatch.build.targets.sdist]
exclude = [
    "MESSAGES.md",
    "setup_spyder_paths.py",
    "validate_docs.py",
    "artifacts/",
    "website/",
    ".claude/",
    ".github/",
]

[tool.pytest.ini_options]
pythonpath = ["lazybridge"]
testpaths  = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not live and not heavy_render'"
filterwarnings = [
    "ignore:Module already imported so cannot be rewritten; anyio:pytest.PytestAssertRewriteWarning",
]
markers = [
    "live: opt-in live tests that call real provider APIs (run with: pytest -m live)",
    "heavy_render: tests that need WeasyPrint/Quarto/Chrome — excluded from the default suite",
]

# ---------------------------------------------------------------------------
# Ruff — linting & formatting
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E402",    # module-level import not at top (deferred imports are intentional)
    "E501",    # line length handled by formatter
    "E741",    # ambiguous variable name (l, O, I)
    "UP007",   # use X | Y (already used, but some Optional[] remain)
    "SIM105",  # contextlib.suppress vs try/except/pass (readability)
    "SIM108",  # ternary instead of if-else (readability)
    "B008",    # function call in default arg (Pydantic uses this pattern)
    "B905",    # zip() strict= (not always needed)
    "RUF002",  # ambiguous unicode in docstrings (en-dash is intentional)
    "RUF003",  # ambiguous unicode in comments
    "RUF005",  # iterable unpacking vs concatenation (readability)
    "RUF012",  # mutable class variable annotation
    "RUF022",  # __all__ sorted (grouped by category instead)
    "RUF059",  # unused unpacked variable (common in test fixtures)
]

[tool.ruff.lint.isort]
known-first-party = ["lazybridge"]

# ---------------------------------------------------------------------------
# Mypy — gradual type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["lazybridge"]
# Coverage scope.  The framework extensions (``ext.otel``, ``ext.mcp``,
# ``ext.hil``, ``ext.planners``, ``ext.evals``, ``ext.viz``, ``ext.gateway``)
# are gated as first-class surface and run in the default test suite.
# Domain tool packages (``external_tools.*``) are split: pure logic
# (path safety, HTML/YAML escaping, fragment validation) is covered by
# lightweight tests in the default suite; heavy render paths that need
# optional deps (WeasyPrint, Quarto binary, Chrome) remain excluded.
omit = [
    # Heavy render back-ends that need optional system deps (WeasyPrint,
    # Quarto binary, Chrome) — exercised by opt-in smoke tests only.
    "lazybridge/external_tools/report_builder/exporters/quarto.py",
    "lazybridge/external_tools/report_builder/quarto/detect.py",
    "lazybridge/external_tools/report_builder/quarto/project.py",
    "lazybridge/external_tools/report_builder/charts/*",
    "lazybridge/external_tools/report_builder/citations.py",
    "lazybridge/external_tools/doc_skills/*",
    "lazybridge/external_tools/read_docs/*",
]

[tool.coverage.report]
# Coverage gate.  Cross-cutting ``ext.*`` extensions
# (mcp / otel / hil / planners / evals / gateway / viz) are gated as
# first-class.  Pre-1.0: 70%; raise in increments toward 80% as we
# backfill provider-streaming + HIL paths.
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
