[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lazybridge"
version = "0.7.9"
description = "Zero-boilerplate multi-provider LLM agent framework"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Marco Selvatici" }]
keywords = ["llm", "agents", "multi-agent", "anthropic", "openai", "google", "pipeline", "tool-use"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["pydantic>=2.0.0,<3.0.0"]

# Provider SDKs are capped at the next major to prevent silent breakage
# from `pip install -U` when upstream ships an incompatible release.
# Bump the upper bound intentionally after re-running the provider
# integration tests against the new major.
[project.optional-dependencies]
anthropic = ["anthropic>=0.49.0,<1.0.0"]
openai    = ["openai>=1.70.0,<3.0.0"]
google    = ["google-genai>=1.10.0,<2.0.0"]
deepseek  = ["openai>=1.70.0,<3.0.0"]
# LiteLLM bridge — unlocks 100+ extra providers (Mistral, Cohere, Groq,
# Bedrock, Vertex, Ollama, etc.) behind the ``litellm/`` model-string
# prefix. Native providers still handle their own models directly.
litellm   = ["litellm>=1.40.0,<2.0.0"]
yaml      = ["pyyaml>=6.0,<7.0"]
tools     = ["pypdf>=3.0,<7.0", "python-docx>=1.0,<2.0", "trafilatura>=1.6,<3.0"]
# Reporting subsystem extracted to the sibling lazybridge-reports
# package in 0.7.9 (see https://github.com/selvaz/LazyReport).  The
# old [report], [pdf], [report-charts], [report-citations], and
# [report-fallback] extras live there now — install via
# ``pip install 'lazybridge-reports[charts,citations,fallback]'``.
otel      = ["opentelemetry-api>=1.20,<2.0", "opentelemetry-sdk>=1.20,<2.0"]
mcp       = ["mcp>=1.0,<2.0"]
# At-rest encryption for Store values via EncryptedStoreAdapter.  Pulls
# ``cryptography`` (Fernet = AES-128-CBC + HMAC-SHA256, key rotation via
# MultiFernet).  Opt-in because cryptography is a C-extension; the rest
# of LazyBridge stays pure-Python by default.
encryption = ["cryptography>=42,<46"]
# ``pydantic`` is a runtime dependency but tests import it directly
# (fixtures, dataclass coercion, schema validation).  Including it in
# the [test] extra makes ``pip install -e '.[test]'`` a one-step
# bootstrap for newcomers.
test      = ["pytest>=7.0", "pytest-asyncio>=0.23", "pytest-cov>=4.0", "pydantic>=2.0.0,<3.0.0", "pyyaml>=6.0,<7.0"]
docs      = [
    "mkdocs-material>=9.5,<10.0",
    "mkdocstrings[python]>=0.24,<1.0",
    "mkdocs-llmstxt>=0.3,<1.0",
    "pymdown-extensions>=10.0,<11.0",
]
all       = ["anthropic>=0.49.0,<1.0.0", "openai>=1.70.0,<3.0.0", "google-genai>=1.10.0,<2.0.0", "litellm>=1.40.0,<2.0.0", "pyyaml>=6.0,<7.0", "pypdf>=3.0,<7.0", "python-docx>=1.0,<2.0", "trafilatura>=1.6,<3.0", "opentelemetry-api>=1.20,<2.0", "opentelemetry-sdk>=1.20,<2.0", "mcp>=1.0,<2.0", "cryptography>=42,<46"]

[project.urls]
Homepage      = "https://github.com/selvaz/LazyBridge"
Repository    = "https://github.com/selvaz/LazyBridge"
Documentation = "https://selvaz.github.io/LazyBridge"
Changelog     = "https://github.com/selvaz/LazyBridge/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/selvaz/LazyBridge/issues"

[tool.hatch.build.targets.wheel]
packages = ["lazybridge"]

[tool.hatch.build.targets.sdist]
exclude = [
    "MESSAGES.md",
    "setup_spyder_paths.py",
    "validate_docs.py",
    "artifacts/",
    "website/",
    ".claude/",
    ".github/",
]

[tool.pytest.ini_options]
testpaths  = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not live and not heavy_render'"
filterwarnings = [
    "ignore:Module already imported so cannot be rewritten; anyio:pytest.PytestAssertRewriteWarning",
]
markers = [
    "live: opt-in live tests that call real provider APIs (run with: pytest -m live)",
    "heavy_render: tests that need WeasyPrint/Quarto/Chrome — excluded from the default suite",
]

# ---------------------------------------------------------------------------
# Ruff — linting & formatting
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E402",    # module-level import not at top (deferred imports are intentional)
    "E501",    # line length handled by formatter
    "E741",    # ambiguous variable name (l, O, I)
    "UP007",   # use X | Y (already used, but some Optional[] remain)
    "SIM105",  # contextlib.suppress vs try/except/pass (readability)
    "SIM108",  # ternary instead of if-else (readability)
    "B008",    # function call in default arg (Pydantic uses this pattern)
    "B905",    # zip() strict= (not always needed)
    "RUF002",  # ambiguous unicode in docstrings (en-dash is intentional)
    "RUF003",  # ambiguous unicode in comments
    "RUF005",  # iterable unpacking vs concatenation (readability)
    "RUF012",  # mutable class variable annotation
    "RUF022",  # __all__ sorted (grouped by category instead)
    "RUF059",  # unused unpacked variable (common in test fixtures)
]

[tool.ruff.lint.isort]
known-first-party = ["lazybridge"]

# ---------------------------------------------------------------------------
# Mypy — gradual type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true

# Phase-4 strict tier — the framework's user-facing core.  These
# modules are stable and small enough to type-check strictly without
# blocking other work.  The rest of the codebase remains in the
# permissive default tier; subsequent releases tighten one module at
# a time.
[[tool.mypy.overrides]]
module = [
    "lazybridge.envelope",
    "lazybridge.predicates",
    "lazybridge.sentinels",
]
disallow_untyped_defs = true
check_untyped_defs = true
warn_unused_ignores = true

# Phase-6 strict tier — engines + provider adapters.  All bare
# generics now carry explicit type args (``Envelope[Any]``,
# ``list[Any]``, ``dict[str, Any]``), every public-ish helper has a
# return annotation, and stale ``# type: ignore`` comments have been
# stripped.  Strict mode catches: ``no-any-return``,
# ``no-untyped-def``, ``type-arg``, ``unused-ignore``, and the rest
# of the strict-mode rule set.  Run with::
#
#     mypy lazybridge/engines/ lazybridge/core/providers/ --strict
#
# to validate this tier in isolation.
[[tool.mypy.overrides]]
module = [
    "lazybridge.engines.*",
    "lazybridge.core.providers.*",
]
disallow_untyped_defs = true
check_untyped_defs = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_optional = true
warn_return_any = true

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["lazybridge"]
# Coverage scope.  The framework extensions (``ext.otel``, ``ext.mcp``,
# ``ext.hil``, ``ext.planners``, ``ext.evals``, ``ext.viz``, ``ext.gateway``)
# are gated as first-class surface and run in the default test suite.
# Domain tool packages (``external_tools.*``) are split: pure logic
# (path safety, HTML/YAML escaping, fragment validation) is covered by
# lightweight tests in the default suite; heavy render paths that need
# optional deps (WeasyPrint, Quarto binary, Chrome) remain excluded.
omit = [
    # Domain tool kits gated behind optional extras.
    "lazybridge/external_tools/doc_skills/*",
    "lazybridge/external_tools/read_docs/*",
]

[tool.coverage.report]
# Coverage gate.  Cross-cutting ``ext.*`` extensions
# (mcp / otel / hil / planners / evals / gateway / viz) are gated as
# first-class.  0.7.9: 73 % (current is ~75 %; the 85 % target stays
# as a Phase 6 goal after we backfill provider-streaming and HIL
# paths.  The ``report_builder`` extraction (Phase 5, done) already
# trimmed several heavy modules out of the omit list.
fail_under = 73
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
